Post from model

--- a/Blog.WEB/Views/Admin/Index.cshtml
+++ b/Blog.WEB/Views/Admin/Index.cshtml
@@ -1,9 +1,4 @@
-
-@{
-    ViewData["Title"] = "Admin Giriþi";
-}
-
-<h2>Admin Panel</h2>
+ï»¿
 <form asp-controller="Admin" asp-action="Index" method="post">
     <p>
         <input class="input-group" type="text" id="Username" name="Username" />
@@ -11,6 +6,5 @@
     <p>
         <input class="input-group" type="text" id="Password" name="Password" />
     </p>
-        <button type="submit">Giriþ</button>
+    <button type="submit">GiriÅŸ</button>
 </form>
- 
