--- a/Blog.WEB/Views/Home/About.cshtml
+++ b/Blog.WEB/Views/Home/About.cshtml
@@ -1,7 +1,31 @@
-﻿@{
-    ViewData["Title"] = "About";
-}
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
-
-<p>Use this area to provide additional information.</p>
+﻿<h4>Merhabalar,</h4>
+<h5>1989 yılında Bursa'nın Osmangazi ilçesinde doğdum. Henüz 40 günlük iken İstanbul'a taşındık.</h5>
+ 
+<h5>
+    Kuleli İlköğretim Okulu'nda okuduğum 8 yılın ardından Zeytinburnu Teknik Lisesi'ne girdim.<br />
+    Elektronik Bölümü'nde 1 yılımı tamamladıktan sonra yatay geçiş ile 
+    Bilgisayar Programcılığı Bölümü'ne geçiş yaptım.<br />
+    Zengin eğitim içeriği olan lisede Turbo Pascal ile başladığım yazılım serüvenime C++, Visual Basic 6.0, 
+    Delphi, C# ile devam ettim.
+</h5>
+<h5>
+    Üniversiteye hazırlanmak için 1 yıl ara verdiğim eğitim kariyerime 2008-2012 yılları arasında Kocaeli Üniversitesi Bilgisayar 
+    Öğretmenliği ile devam ettim. 
+    2011 yılında üniversite değişim programı olan Work And Travel ile Amerika'ya gittim. <br />
+    Üniversite yılları boyunca C++, Java, C#, Javascript, MSSQL, MySQL gibi diller ile uğraştım.
+</h5>
+<h5>
+    2014 yılında Ahmet Yesevi Üniversitesi Bilgisayar Mühendisliği Yüksek Lisans programına başladım.<br />
+    Veri Madenciliği, Yapay Zeka, Semantik Web, Bulanık Mantık gibi farklı alanlarla ilgilendim.<br />
+    Bitirme projesi olarak bu bloğu ASP.Net Core MVC & API kullanarak geliştirdim ve Linux üzerinde host ediyorum.
+</h5>
+<h5>
+    Çalışma hayatıma üniversite yıllarımda başladım. Marketlerde tanıtım elemanı olarak çalışmaya başladım.<br />
+    2011 yılında Amerika serüvenimde Quality Controller olarak çalıştım. <br />
+    Daha sonra Aegon Emeklilik ve Hayat şirketinde 3 ay kadar finansal güvence danışmanlığı yaptım.<br />
+    Profesyonel yazılım kariyerime 2013 yılında Sektörsoft ile başladım. MVC projelerinde görev aldım.<br />
+    3 yıla yakın görev aldığım firmada son 1 yıl takım liderliği yaptım.<br />
+    2016 Ekim ile 2017 Mayıs tarihleri arasında BNP Paribas Cardif firmasında Yazılım Geliştirme Yönetmen Yardımcılığı yaptım.<br />
+    Çokça .Net projesine destek verdim. Ayrıca kurumun ilk MVC projesine start verip mimari geliştirmelerini tamamladım.<br />
+    Mayıs 2017 tarihinde Adesso Turkey firmasına geçtim.
+</h5>
