--- a/Blog.WEB/Views/Admin/Index.cshtml
+++ b/Blog.WEB/Views/Admin/Index.cshtml
@@ -6,5 +6,5 @@
     <p>
         <input class="input-group" type="text" id="Password" name="Password" />
     </p>
-    <button type="submit">Giriş</button>
+    <button class="btn btn-primary" type="submit">Giriş</button>
 </form>
