--- a/Blog.WEB/Views/Admin/Index.cshtml
+++ b/Blog.WEB/Views/Admin/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿
 <form asp-controller="Admin" asp-action="Index" method="post">
     <p>
-        <input class="input-group" type="text" id="Username" name="Username" />
+        <input class="input-group" type="text" id="Username" name="Username" placeholder="Kullanıcı adı" />
     </p>
     <p>
-        <input class="input-group" type="text" id="Password" name="Password" />
+        <input class="input-group" type="password" id="Password" name="Password" placeholder="Şifre" />
     </p>
     <button class="btn btn-primary" type="submit">Giriş</button>
 </form>
