--- a/Blog.WEB/Views/Entry/Add.cshtml
+++ b/Blog.WEB/Views/Entry/Add.cshtml
@@ -21,56 +21,44 @@
             $("#BlogEditorTable").dataTable();
 
             tinymce.init({
-                selector: "textarea",
-                theme: "modern",
-                height: "350",
-                paste_data_images: true,
+                selector: 'textarea',
+                height: 500,
+                theme: 'modern',
                 plugins: [
-                    "advlist autolink lists link image charmap print preview hr anchor pagebreak",
-                    "searchreplace wordcount visualblocks visualchars code fullscreen",
-                    "insertdatetime media nonbreaking save table contextmenu directionality",
-                    "emoticons template paste textcolor colorpicker textpattern"
+                    'advlist autolink lists link image charmap print preview hr anchor pagebreak',
+                    'searchreplace wordcount visualblocks visualchars code fullscreen',
+                    'insertdatetime media nonbreaking save table contextmenu directionality',
+                    'emoticons template paste textcolor colorpicker textpattern imagetools codesample toc'
                 ],
-                toolbar1: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
-                toolbar2: "print preview media | forecolor backcolor emoticons",
+                toolbar1: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
+                toolbar2: 'print preview media | forecolor backcolor emoticons | codesample',
                 image_advtab: true,
-                file_browser_callback: function (fieldName, url, type, win) {
-                    var inputElement = document.createElement("input");
-                    inputElement.type = "file";
-                    inputElement.addEventListener("change", callback);
-                    inputElement.dispatchEvent(new MouseEvent("click"));
-                },
-                images_upload_handler: function (blobInfo, success, failure) {
-                    var xhr, formData;
-                    xhr = new XMLHttpRequest();
-                    xhr.withCredentials = false;
-                    xhr.open('POST', 'postAcceptor.php');
-                    xhr.onload = function () {
-                        var json;
+                images_upload_base_path: '/FileUpload',
+                images_upload_credentials: false,
+                image_title: true,
+                automatic_uploads: true,
+                
+                file_picker_types: 'image',
+                file_picker_callback: function (cb, value, meta) {
+                    var input = document.createElement('input');
+                    input.setAttribute('type', 'file');
+                    input.setAttribute('accept', 'image/*');
 
-                        if (xhr.status != 200) {
-                            failure('HTTP Error: ' + xhr.status);
-                            return;
-                        }
-                        json = JSON.parse(xhr.responseText);
-
-                        if (!json || typeof json.location != 'string') {
-                            failure('Invalid JSON: ' + xhr.responseText);
-                            return;
-                        }
-                        success(json.location);
+                    input.onchange = function () {
+                        var file = this.files[0];
+                        var reader = new FileReader();
+                        reader.readAsDataURL(file);
+                        reader.onload = function () {
+                            var id = 'blobid' + (new Date()).getTime();
+                            var blobCache = tinymce.activeEditor.editorUpload.blobCache;
+                            var blobInfo = blobCache.create(id, file, reader.result);
+                            blobCache.add(blobInfo, reader.result);
+                            cb(blobInfo.blobUri(), { title: file.name });
+                        };
                     };
-                    formData = new FormData();
-                    formData.append('file', blobInfo.blob(), fileName(blobInfo));
-                    xhr.send(formData);
-                },
-                templates: [{
-                    title: 'Test template 1',
-                    content: 'Test 1'
-                }, {
-                    title: 'Test template 2',
-                    content: 'Test 2'
-                }]
+
+                    input.click();
+                }
             });
 
         })
