--- a/Blog.WEB/Views/Shared/_Layout.cshtml
+++ b/Blog.WEB/Views/Shared/_Layout.cshtml
@@ -93,6 +93,7 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="~/lib/DataTables/media/js/jquery.dataTables.js"></script>
         <script src="~/lib/tinymce/tinymce.js"></script>
+        <script src="~/lib/tinymce/jquery.tinymce.js"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
