--- a/Blog.WEB/Views/Entry/Add.cshtml
+++ b/Blog.WEB/Views/Entry/Add.cshtml
@@ -1,11 +1,23 @@
-@model Blog.Model.Data.Entry
+﻿@model Blog.Model.Data.Entry
 <form asp-controller="Entry" asp-action="Save" method="post">
     <div class="btn-group">
         <button class="btn btn-success" type="submit">Kaydet</button>
         <button class="btn btn-primary" type="reset">Temizle</button>
     </div>
     <br /><br />
-    <input asp-for="Title" style="width:100%" />
+    <label>Başlık : &nbsp;</label><input asp-for="Title" style="width:100%" />
+    <br /><br />
+    <label>Kategori : &nbsp;</label>
+    <select asp-for="Category">
+        @{ 
+            foreach(var items in (List<Blog.Model.Data.Category>)ViewBag.Categories)
+            {
+                <option value="@items.Id">@items.Title</option>
+
+            }
+        }
+
+    </select>
     <p>
         <br />
         <textarea asp-for="Content"></textarea>
