--- a/Blog.WEB/Views/Home/Index.cshtml
+++ b/Blog.WEB/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
     {
         <div class="panel panel-default">
             <div class="panel-heading">@items.Title</div>
-            <div class="panel-body">
-               @Html.Raw(items.Content)
+            <div class="panel-body" style="word-wrap:break-word;">
+               @Html.Raw(items.Summary)
                 <form style="float:right;" asp-controller="Home" asp-action="Detail" asp-route-id="@items.Id">
                     <button class="btn-link">Devamı için</button>
                 </form>
