--- a/Blog.WEB/Views/Admin/Index.cshtml
+++ b/Blog.WEB/Views/Admin/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿<div class="alert alert-info ">
+    <strong>Bilgi! </strong>Admin işlemlerini yapabilmek için giriş yapmalısınız.
+</div>
 <form asp-controller="Admin" asp-action="Index" method="post">
     <p>
         <input class="input-group" type="text" id="Username" name="Username" placeholder="Kullanıcı adı" />
