--- a/Blog.WEB/Views/Home/Detail.cshtml
+++ b/Blog.WEB/Views/Home/Detail.cshtml
@@ -3,7 +3,7 @@
 <h3 style="border-bottom:1px solid #4a4343;">
  @Model.Title
 </h3>
-<h4>
+<h4 style="font-weight:100;">
    @Html.Raw(Model.Content)
 </h4>
 
